@@ -1,3 +1,9 @@
+2000-06-19  Adam Fedor  <fedor@gnu.org>
+
+	* Source/NSBundle.m (_bundle_name_first_match): Work even when
+	filename has a directory component. (patch from Julian van
+	Greunen <vangrn@lantic.co.za>).
+
 2000-06-21  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSScanner.m: ([-scanHexInt:]) fixed to permit leading 0x or 0X
